; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/extr_ZendAccelerator.c_preload_fetch_resolved_ce.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/extr_ZendAccelerator.c_preload_fetch_resolved_ce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@class_table = common dso_local global i32 0, align 4
@ZEND_ACC_CONSTANTS_UPDATED = common dso_local global i32 0, align 4
@ZEND_ACC_PROPERTY_TYPES_RESOLVED = common dso_local global i32 0, align 4
@ZEND_INTERNAL_CLASS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_5__* (i32*, %struct.TYPE_5__*)* @preload_fetch_resolved_ce to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_5__* @preload_fetch_resolved_ce(i32* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @zend_string_tolower(i32* %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32, i32* @class_table, align 4
  %11 = call i32 @EG(i32 %10)
  %12 = load i32*, i32** %6, align 8
  %13 = call %struct.TYPE_5__* @zend_hash_find_ptr(i32 %11, i32* %12)
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** %7, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @zend_string_release(i32* %14)
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %17 = icmp ne %struct.TYPE_5__* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %2
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %43

19:                                               ; preds = %2
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %22 = icmp eq %struct.TYPE_5__* %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %3, align 8
  br label %43

25:                                               ; preds = %19
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = load i32, i32* @ZEND_ACC_CONSTANTS_UPDATED, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %33, label %32

32:                                               ; preds = %25
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %43

33:                                               ; preds = %25
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = load i32, i32* @ZEND_ACC_PROPERTY_TYPES_RESOLVED, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %41, label %40

40:                                               ; preds = %33
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %43

41:                                               ; preds = %33
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  store %struct.TYPE_5__* %42, %struct.TYPE_5__** %3, align 8
  br label %43

43:                                               ; preds = %41, %40, %32, %23, %18
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  ret %struct.TYPE_5__* %44
}

declare dso_local i32* @zend_string_tolower(i32*) #1

declare dso_local %struct.TYPE_5__* @zend_hash_find_ptr(i32, i32*) #1

declare dso_local i32 @EG(i32) #1

declare dso_local i32 @zend_string_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
